--- a/order_questions_page.html
+++ b/order_questions_page.html
@@ -119,7 +119,7 @@
                     <hr>
                     <div class="accordion" id="accordionExample">
                         <div class="card_queston" style="border: none">
-                            <div class="card-header" id="headingOne">
+                            <div class="card-header_info" id="headingOne">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block text-left button_box" type="button" data-toggle="collapse" data-target="#collapseOne" aria-controls="collapseOne">
                                   Question #1
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="card_queston" style="border: none">
-                            <div class="card-header" id="headingTwo">
+                            <div class="card-header_info" id="headingTwo">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-controls="collapseTwo">
                                   Question #2
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                         <div class="card_queston" style="border: none">
-                            <div class="card-header" id="headingThree">
+                            <div class="card-header_info" id="headingThree">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block text-left collapsed button_box" type="button" data-toggle="collapse" data-target="#collapseThree" aria-controls="collapseThree">
                                   Question #3
